# zappy

./: .gitignore  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/models/: __init__.py  attendance.py  audit.py  company.py  device.py  file.py  project.py  time_log.py  user.py  visit.py  work_order.py  workflow.py
backend/app/utils/: audit.py  decorators.py  pagination.py  seed.py  uploads.py
backend/migrations/versions/: 07b91ecb654b_phase_3a_device_templates.py  4557de9134b0_initial.py  680b2d909867_add_attendances_table.py  b7cd6da107d9_add_specializations_and_trade_fields.py  d6b66f8e795d_replace_trade_varchar_with_trades_jsonb_.py  d8378eeed0a7_add_stage_requirements_to_workflow_.py  e7f0ce71e741_add_visits_and_visit_assignments_tables.py  e898ac48bd59_phase_3a_device_template_capability_.py
backend/tests/: conftest.py  test_auth.py  test_devices.py  test_projects.py  test_time_logs.py  test_users.py  test_visits.py  test_work_orders.py  test_workflow.py
docs/: Device List - CSV Guidelins.docx  Project Guidelines.docx
docs/csv_templates/: device_list.csv  switchport_list.csv
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: attendance.js  client.js  devices.js  files.js  projects.js  timeLogs.js  users.js  (+3 more)
tests/data/: device_list_incorrect_1.csv  device_list_large.csv  device_list_small.csv
tests/unit/: test_device_inventory.py  test_networking_tools.py
(+50 files in other folders)
